<resources>
    <string name="app_name">GenMate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_farm">Daily Farmables</string>
    <string name="menu_resin">Resin Times</string>
    <string name="menu_crit">Crit Calculator</string>
    <string name="menu_map">Game Map</string>
    <string name="menu_realm">Realm Currency Times</string>

    <string name="activity_qr">QR Code UID Share</string>
    <string name="activity_settings">Settings</string>

    <string name="title_for_crit_calc">GenMate Critical Ratio Calculator</string>
</resources>